--- a/partials/sell.html
+++ b/partials/sell.html
@@ -1,1 +1,29 @@
 sell page
+<button id="test">test</button>
+
+<script>
+	$(document).ready(function(){
+	
+	$("#test").click(function(){
+		var url = "/controllers/testing/tests";
+		
+		var param = JSON.stringify({test:test});
+		$.ajax({
+			url: url,
+			data: param,
+			dataType: "json",
+			success: function(data, textStatus, jqXHR){
+				console.log(data);
+			},
+			error: function(jqXHR, textStatus, error){
+				//debug.log(textStatus + ":" + error);
+			},
+			complete: function(jqXHR, textStatus){
+				//debug.log("ajax call complete");
+			}
+		})
+	});
+});
+
+
+</script>
