--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -1,1 +1,66 @@
-test page
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new_wanted">New Wanted</button>
+
+<div class="modal fade" id="1new_wanted" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+        <h4 class="modal-title center" id="myModalLabel">Wanted</h4>
+      </div>
+      <div class="modal-body">
+        ...
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+        <button type="button" class="btn btn-primary">Save changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+<div class="modal fade" id="new_wanted" role="dialog">
+	<div class="modal-dialog">
+		<!-- Modal content-->
+		<div class="modal-content">
+			<form action="/controllers/shoe" method="POST">
+				<!-- <div class="modal-body">
+					<div class="form-group">
+						<label for="url">Art Url:</label>
+						<div class="input-group col-xs-12">
+						  <input class="form-control" name="url" type="text" id="url">
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="category">Where to upload:</label>
+						<div class="dropdown">
+							<input class="form-control btn btn-default dropdown-toggle" id="category" name="category" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" placeholder="Choose Category">
+							<ul class="dropdown-menu" id="categories" name="categories" aria-labelledby="category"></ul>
+						</div>
+					</div>
+					<div class="form-group">
+						<label for="title">Title:</label>
+						<input class="form-control" type="text" name="title" id="title" maxlength="50">
+					</div>
+					<div class="form-group">
+						<label for="description">Description:</label>
+						<textarea class="form-control" rows="5" maxlength="500" name="description" id="description"></textarea>
+					</div>
+					<div class="form-group">
+						<label for="description">Tag:</label>
+						<input class="form-control" name="tag" placeholder="divide multiple tags by #"></input>
+					</div>
+				</div> -->
+				<div class="modal-footer">
+					<button type="button" class="btn btn-blog pull-left" data-dismiss="modal">
+					Close
+					</button>
+					<button type="submit" class="btn btn-blog pull-right" id="uploadGallery">
+					Upload
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
