--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -24,7 +24,7 @@
 	<div class="modal-dialog">
 		<!-- Modal content-->
 		<div class="modal-content">
-			<form action="/controllers/shoe" method="POST">
+			<form action="/controllers/shoe/1" method="POST">
 				<!-- <div class="modal-body">
 					<div class="form-group">
 						<label for="url">Art Url:</label>
