--- a/partials/login.html
+++ b/partials/login.html
@@ -1,7 +1,18 @@
-<p>login</p>
-<a href="https://www.facebook.com/dialog/oauth?client_id=YOUR_APP_ID&redirect_uri=YOUR_APP_REDIRECT_URL&scope=publish_stream,email" title="Signup with facebook">
+<button id="fb-login">FaceBook Login</button>
  
-<button>Signup with facebook</button>
  
-</a>
-- See more at: http://aniri.ro/geek/tutorials/how-to-make-website-registration-easier-using-facebook-accounts/#sthash.ipOZuEuU.dpuf
+ 
+<script  type="text/javascript">
+//runs everything inside when whole document is ready
+$(document).ready(function(){
+	
+	$("#fb-login").click(function(){
+		
+		window.alert("You clicked on a button!");
+	});
+	
+});
+	
+
+
+</script>
