--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -33,10 +33,9 @@
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="category">Where to upload:</label>
+						<label for="isWanted">Where to upload:</label>
 						<div class="dropdown">
-							<input class="form-control btn btn-default dropdown-toggle" id="category" name="category" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" placeholder="Choose Category">
-							<ul class="dropdown-menu" id="isWanted" name="categories" aria-labelledby="category"></ul>
+							<input class="form-control btn btn-default dropdown-toggle" id="isWanted" name="isWanted" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" placeholder="Choose Category">
 						</div>
 					</div>
 					<div class="form-group">
