--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -7,6 +7,8 @@
     <link href="/components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/components/layout.css" rel="stylesheet">
     <script src="/components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+    
+    <script src="/partials/login-controller.js" type="text/javascript" charset="utf-8"></script>
 
     <title>ShoeTaku</title>
 
@@ -16,7 +18,6 @@
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
-
 
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
@@ -28,16 +29,12 @@
             </button>
             <a class="navbar-brand" href="#">ShoeTaku</a>
         </div>
-        
-        
 
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
                 <li class="active"><a id="sellPage" class="page" data-page="sell" href="#">Sell <span class="sr-only">(current)</span></a></li>
                 <li><a id="wantedPage" class="page" data-page="wanted" href="#">Wanted</a></li>
-                
-              
             </ul>
             <form class="navbar-form navbar-left" role="search">
                 <div class="form-group">
@@ -57,12 +54,11 @@
                         <li><a href="#">Separated link</a></li>
                     </ul>
                 </li>
+                <li><fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();"></fb:login-button></li>
             </ul>
         </div> <!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
 
-
-    
 </nav>
     
     <div class="container-fluid">
@@ -71,4 +67,4 @@
     <script src="/partials/view-controller.js" type="text/javascript" charset="utf-8"></script>
     
     </body>
-    </html>
+</html>
