Centered text and button on login page

--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -56,6 +56,7 @@
                         <li><a href="#">Separated link</a></li>
                     </ul>
                 </li>
+                <!-- TODO create container for this so we can differentiate between manual login and FB login -->
                 <li><fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();" ></fb:login-button></li>
             </ul>
         </div> <!-- /.navbar-collapse -->
