--- a/partials/wanted.html
+++ b/partials/wanted.html
@@ -1,6 +1,6 @@
-<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#new_wanted">New Wanted</button>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#uploadChoice">New Wanted</button>
 
-<div class="modal fade" id="1new_wanted" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+<!-- <div class="modal fade" id="uploadChoice" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
@@ -18,54 +18,153 @@
       </div>
     </div>
   </div>
+</div> -->
+
+<div class="modal fade" id="uploadChoice" role="dialog">
+	<div class="modal-dialog">
+		<!-- Modal content-->
+		<div class="center">
+			<button type="button" class="btn btn-glyphicon jumbotron" data-toggle="modal" data-target="#new_wanted_img">
+				<div class="glyphicon glyphicon-file glyphicon-big" aria-hidden="true"></div>
+	            <div class="row">Image Upload</div>
+			</button>
+
+			<button type="button" class="btn btn-glyphicon jumbotron" data-toggle="modal" data-target="#new_wanted_url">
+				<div class="glyphicon glyphicon-globe glyphicon-big" aria-hidden="true"></div>
+	            <div class="row">Url Upload</div>
+			</button>
+		</div>	
+	</div>
 </div>
 
-<div class="modal fade" id="new_wanted" role="dialog">
+<div class="modal fade" id="new_wanted_img" role="dialog">
 	<div class="modal-dialog">
 		<!-- Modal content-->
 		<div class="modal-content">
 			<form action="/controllers/shoe" method="POST">
 				<div class="modal-body">
 					<div class="form-group">
-						<label for="url">Shoe Url:</label>
+						<label for="image">Shoe Image:</label>
 						<div class="input-group col-xs-12">
-						  <input class="form-control" name="imageUrl" type="text" id="url">
+							<input class="form-control" type="file" name="image" id="image">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="isWanted">Where to upload:</label>
-						<div class="dropdown">
-							<input class="form-control btn btn-default dropdown-toggle" id="isWanted" name="isWanted" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true" placeholder="Choose Category">
+						<label for="brandImg">Shoe Brand:</label>
+						<div class="input-group col-xs-12">
+						  <input class="form-control" name="brand" type="text" id="brandImg">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="url">Shoe Brand:</label>
+						<label for="modelImg">Shoe Model:</label>
 						<div class="input-group col-xs-12">
-						  <input class="form-control" name="brand" type="text" id="url">
+						  <input class="form-control" name="model" type="text" id="modelImg">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="url">Shoe Model:</label>
+						<label for="sizeImg">Shoe Size:</label>
+						<select class="form-control" name="size" id="sizeImg" required>
+							<option disabled selected value> -- Select a Size -- </option>
+							<option value=14>US 14</option>
+							<option value=13>US 13</option>
+							<option value=12>US 12</option>
+							<option value=11>US 11</option>
+							<option value=10>US 10</option>
+							<option value=9>US 9</option>
+							<option value=8>US 8</option>
+							<option value=7>US 7</option>
+							<option value=6>US 6</option>
+							<option value=5>US 5</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="itemConditionImg">Select Quality:</label>
+						<select class="form-control" name="itemCondition" id="itemConditionImg">
+							<option disabled selected value> -- Select a Quality -- </option>
+							<option value=5>Mint Condition</option>
+							<option value=4>New</option>
+							<option value=3>Worn Once or Twice</option>
+							<option value=2>2nd Hand</option>
+							<option value=1>Don't care about the quality, as long as I got it</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="descriptionImg">Shoe Description:</label>
 						<div class="input-group col-xs-12">
-						  <input class="form-control" name="model" type="text" id="url">
+						  <input class="form-control" name="description" type="text" id="descriptionImg">
+						</div>
+					</div>
+				</div>
+
+				<div class="modal-footer">
+					<button type="button" class="btn btn-blog pull-left" data-dismiss="modal">
+					Close
+					</button>
+					<button type="submit" class="btn btn-blog pull-right">
+					Upload
+					</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+
+
+<div class="modal fade" id="new_wanted_url" role="dialog">
+	<div class="modal-dialog">
+		<!-- Modal content-->
+		<div class="modal-content">
+			<form action="/controllers/shoe" method="POST">
+				<div class="modal-body">
+					<div class="form-group">
+						<label for="imageUrl">Shoe Url:</label>
+						<div class="input-group col-xs-12">
+						  <input class="form-control" name="url" type="text" id="imageUrl">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="url">Shoe Size:</label>
+						<label for="brandUrl">Shoe Brand:</label>
 						<div class="input-group col-xs-12">
-						  <input class="form-control" name="size" type="text" id="url">
+						  <input class="form-control" name="brand" type="text" id="brandUrl">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="url">Shoe Condition:</label>
+						<label for="modelUrl">Shoe Model:</label>
 						<div class="input-group col-xs-12">
-						  <input class="form-control" name="itemCondition" type="text" id="url">
+						  <input class="form-control" name="model" type="text" id="modelUrl">
 						</div>
 					</div>
 					<div class="form-group">
-						<label for="url">Shoe Description:</label>
+						<label for="sizeUrl">Shoe Size:</label>
+						<select class="form-control" name="size" id="sizeUrl" required>
+							<option disabled selected value> -- Select a Size -- </option>
+							<option value=14>US 14</option>
+							<option value=13>US 13</option>
+							<option value=12>US 12</option>
+							<option value=11>US 11</option>
+							<option value=10>US 10</option>
+							<option value=9>US 9</option>
+							<option value=8>US 8</option>
+							<option value=7>US 7</option>
+							<option value=6>US 6</option>
+							<option value=5>US 5</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="itemConditionUrl">Select Quality:</label>
+						<select class="form-control" name="itemCondition" id="itemConditionUrl" required>
+							<option disabled selected value> -- Select a Quality -- </option>
+							<option value=5>Mint Condition</option>
+							<option value=4>New</option>
+							<option value=3>Worn Once or Twice</option>
+							<option value=2>2nd Hand</option>
+							<option value=1>Don't care about the quality, as long as I got it</option>
+						</select>
+					</div>
+					<div class="form-group">
+						<label for="descriptionUrl">Shoe Description:</label>
 						<div class="input-group col-xs-12">
-						  <input class="form-control" name="description" type="text" id="url">
+						  <input class="form-control" name="description" type="text" id="descriptionUrl">
 						</div>
 					</div>
 				</div>
