--- a/partials/login_style.css
+++ b/partials/login_style.css
@@ -3,7 +3,7 @@
    width:500px;
    height:330px;
    margin-top:100px;
-   background-color:#585858;
+   background-color:#FFF;
    border-radius:3px;
    box-shadow:0px 0px 10px 0px #424242;
    padding:10px;
