edited logout tab

--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -7,7 +7,7 @@
     <link href="/components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/components/layout.css" rel="stylesheet">
     <script src="/components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-    
+    <script src="/partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script> 
     
 
     <title>ShoeTaku</title>
@@ -16,7 +16,7 @@
 
 <body>
     
-    <script src="/partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>  
+     
 
 <nav class="navbar navbar-default">
     <div class="container-fluid">
@@ -57,7 +57,8 @@
                     </ul>
                 </li>
                 <!-- TODO create container for this so we can differentiate between manual login and FB login -->
-                <li><fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();" ></fb:login-button></li>
+                <!-- <li><fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();" ></fb:login-button></li> -->
+                <li><a id="wantedPage" class="page" onclick="fbLogout()">Logout</a></li>
             </ul>
         </div> <!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
