--- a/partials/sell.html
+++ b/partials/sell.html
@@ -1,5 +1,25 @@
-sell page
-<button id="test">test</button>
+<?php
+include('../controllers/database.php');
+?>
+<!DOCTYPE HTML>
+<html>
+<head>
+	
+</head>
+<body>
+	<div id="postTitle">
+		<h1>Selling Shoes Post</h1>
+	</div>
+	<div id="sellPostArea">
+
+	</div>
+
+	<button id="test">test</button>
+	<div id="pagination">
+		<div><a href="#" id="1"></a></div>
+	</div>
+</body>
+
 
 <script>
 	$(document).ready(function(){
@@ -27,3 +47,4 @@ sell page
 
 
 </script>
+</html>
