--- a/partials/sell.html
+++ b/partials/sell.html
@@ -4,6 +4,7 @@ include('../controllers/database.php');
 <!DOCTYPE HTML>
 <html>
 <head>
+	<script src="pagination.js"></script>
 	
 </head>
 <body>
@@ -14,10 +15,10 @@ include('../controllers/database.php');
 
 	</div>
 
-	<button id="test">test</button>
-	<div id="pagination">
+	<button id="pagination">test</button>
+	<!-- <div id="pagination">
 		<div><a href="#" id="1"></a></div>
-	</div>
+	</div> -->
 </body>
 
 
