more shoe instances added for further testing for the prepartion of pagination

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -15,7 +15,7 @@ include('../controllers/database.php');
 
 	</div>
 
-	<button id="pagination">test</button>
+	<button id="pagination"></button>
 	<!-- <div id="pagination">
 		<div><a href="#" id="1"></a></div>
 	</div> -->
