sell.html now displays 9 posts

--- a/partials/sell.html
+++ b/partials/sell.html
@@ -11,16 +11,48 @@ include('../controllers/database.php');
 	<div id="postTitle">
 		<h1>Selling Shoes Post</h1>
 	</div>
-	<div id="sellPostArea">
+	<div class="container "id="sellPostArea">
+		<div class="row" id="firstRow">
+			<div class="col-sm-4" id="first_firstPost">
+				
+			</div>
+			<div class="col-sm-4" id="first_secondPost">
+
+			</div>
+			<div class="col-sm-4" id="first_thirdPost">
+			</div>
+		</div>
+
+		<div class="row" id="secondRow">
+			<div class="col-sm-4" id="second_firstPost">
+				
+			</div>
+			<div class="col-sm-4" id="second_secondPost">
+
+			</div>
+			<div class="col-sm-4" id="second_thirdPost">
+			</div>
+		</div>
+
+		<div class="row" id="thirdRow">
+			<div class="col-sm-4" id="third_firstPost">
+				
+			</div>
+			<div class="col-sm-4" id="third_secondPost">
+
+			</div>
+			<div class="col-sm-4" id="third_thirdPost">
+			</div>
+		</div>
 
 	</div>
 
-	<button id="pagination"></button>
-	<!-- <div id="pagination">
-		<div><a href="#" id="1"></a></div>
-	</div> -->
-</body>
+	<button id="pagination">1</button>
+	<button id="pagination">2</button>
+	<button id="pagination">3</button>
+	<button id="pagination">4</button>
 
+</body>
 
 <script>
 	$(document).ready(function(){
