--- a/partials/login_style.css
+++ b/partials/login_style.css
@@ -16,7 +16,7 @@
 #registerForm
 {
     width:500px;
-   height:350px;
+   height:450px;
    margin-top:100px;
    background-color:#FFF;
    border-radius:3px;
@@ -46,7 +46,7 @@
    border-radius:3px;
    padding:5px;
 }
-#loginForm #password, #registerForm #password
+#loginForm #password, #registerForm #password, #confirmPassword, #firstName, #lastName, #age, #city, #country
 {
    margin-top:5px;
    width:250px;
