--- a/partials/login_style.css
+++ b/partials/login_style.css
@@ -1,4 +1,4 @@
-#loginForm
+/*#loginForm
 {
    width:500px;
    height:330px;
@@ -66,7 +66,7 @@
    color:#E6E6E6;
    background-color:grey;
    font-size:20px;
-}
+}*/
 
 
 
