Created temporary logout function

--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -7,6 +7,7 @@
     <link href="/components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/components/layout.css" rel="stylesheet">
     <script src="/components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
+    <script type="text/javascript" src="./components/jquery/jquery.leanModal.min.js"></script>
     
     <script src="/partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
@@ -60,7 +61,8 @@
                 </li>
 
                 <!--<li><a id="wantedPage" class="page" onclick="fbLogout()">Logout</a></li>-->
-                <li><a id="wantedPage" class="page" onclick="authentication.logout()">Logout</a></li>
+                <!--<li><a id="wantedPage" class="page" onclick="authentication.logout()">Logout</a></li>-->
+                <li><a id="wantedPage" class="page" onclick="logout()">Logout</a></li>
             </ul>
         </div> <!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
