--- a/partials/login_style.css
+++ b/partials/login_style.css
@@ -22,10 +22,10 @@
 /* Modal box or Popup box */
 .popupContainer{
 	position:absolute;
-	width:400px;
+	width:500px;
 	height: auto;
 	left:45%;
-	top:75px;
+	top:50px;
 	background: #FFF;
 }
 
@@ -238,24 +238,8 @@ By default, register form is hidden */
      color: #666;
 }
 
-.user_register input[type="checkbox"]  {
-    float: left;
-     margin-right: 5px;
-}
-
-.user_register input[type="checkbox"]+label  {
-    float: left;
-}
-
-
-.user_register .checkbox  {
-    margin-bottom:  10px;
-     clear:  both;
-     overflow:  hidden;
-}
-
  .fb_login{
-     float: left;
+     float: right;
      position: relative;
        top: 2px;
  }
@@ -263,4 +247,6 @@ By default, register form is hidden */
  #error_email, #error_password, #error_emailRegister,#error_passwordRegister, #error_confirmPassword,
  #error_firstName, #error_lastName, #error_age, #error_city, #error_country  {
      color: red;
+     width: 50%;
  }
+ 
