Able to display error div on same line as input for register form

--- a/partials/login_style.css
+++ b/partials/login_style.css
@@ -231,7 +231,7 @@ By default, register form is hidden */
 }
 
 .user_register input[type="text"], .user_register input[type="number"],  .user_register input[type="email"],  .user_register input[type="password"]  {
-    display:  block;
+    /*display:  block;*/
      width: 50%;
      padding:  10px;
      border: 1px solid #DDD;
