--- a/partials/account.html
+++ b/partials/account.html
@@ -1,1 +1,70 @@
-lala
+<center>
+<p>Account Settings</p>	
+</center>
+
+    <div class="user_register">
+        
+      <form id="form2" method="post" action = "/controllers/register">
+
+     <label  for="emailLabel">Email</label>
+     <input type="text" id="emailRegister" name="emailRegister">
+     <div id="error_emailRegister"></div>
+
+     <br>
+     
+     <label  for="passwordLabel">Password</label>
+     <input type="password" id="passwordRegister" name="passwordRegister">
+           <div id="error_passwordRegister"></div> 
+
+     <br>
+     
+     <label  for="confirmPasswordLabel">Confirm Password</label>
+     <input type="password" id="confirmPassword" name="confirmPassword">
+           <div id="error_confirmPassword"></div> 
+
+     <br>
+     
+     <label  for="firstNameLabel">First Name</label>
+     <input type="text" id="firstName" name="firstName">
+           <div id="error_firstName"></div> 
+
+     <br>
+     
+     <label  for="lastNameLabel">Last Name</label>
+     <input type="text" id="lastName" name="lastName">
+           <div id="error_lastName"></div>
+
+     <br>
+     
+     <label  for="ageLabel">Age</label>
+     <input type="number" id="age" name="age" onkeypress="return isNumberKey(event)">
+           <div id="error_age"></div> 
+
+     <br>
+     
+     <label  for="cityLabel">City</label>
+     <input type="text" id="city" name="city">
+           <div id="error_city"></div>
+
+     <br>
+     
+     <label  for="countryLabel">Country</label>
+     <input type="text" id="country" name="country" list="countryList">
+     <datalist id="countryList">
+     <option value="A">
+     </datalist>
+           <div id="error_country"></div>
+     <br>
+     
+     <div class="action_btns">
+                  
+         <div class="one_half last">
+             <input type="submit" id="register" value="Save Changes" class="btn btn_red">
+         </div>
+         
+     </div>
+           
+    </form>
+
+        
+    </div>
