Got rid of lean Modal js console errors

--- a/partials/main-page.html
+++ b/partials/main-page.html
@@ -7,7 +7,7 @@
     <link href="/components/bootstrap-3.3.6-dist 2/css/bootstrap-theme.min.css" rel="stylesheet">
     <link href="/components/layout.css" rel="stylesheet">
     <script src="/components/bootstrap-3.3.6-dist 2/js/bootstrap.min.js" type="text/javascript" charset="utf-8"></script>
-    <script src="./components/jquery/jquery.leanModal.min.js" type="text/javascript"charset="utf-8" ></script>
+    <script src="/components/jquery/jquery.leanModal.min.js" type="text/javascript"charset="utf-8" ></script>
     
     <script src="/partials/fblogin-controller.js" type="text/javascript" charset="utf-8"></script>
     <script src="/partials/nonFBlogin-controller.js" type="text/javascript" charset="utf-8"></script>
