--- a/partials/account.html
+++ b/partials/account.html
@@ -1,6 +1,14 @@
+<!DOCTYPE HTML>
+<html>
+      
+<head>
+
+   <link rel="stylesheet" href="/partials/login_style.css"> 
+</head>
+
+<body>
+
 <center>
-<p>Account Settings</p>	
-</center>
 
     <div class="user_register">
         
@@ -15,12 +23,6 @@
      <label  for="passwordLabel">Password</label>
      <input type="password" id="passwordRegister" name="passwordRegister">
            <div id="error_passwordRegister"></div> 
-
-     <br>
-     
-     <label  for="confirmPasswordLabel">Confirm Password</label>
-     <input type="password" id="confirmPassword" name="confirmPassword">
-           <div id="error_confirmPassword"></div> 
 
      <br>
      
@@ -68,3 +70,9 @@
 
         
     </div>
+    
+    </center>
+
+
+</body>
+</html>
