Able to overwrite CSS style to display account settings form

--- a/partials/account.html
+++ b/partials/account.html
@@ -8,9 +8,8 @@
 
 <body>
 
-<center>
 
-    <div class="user_register">
+    <div class="user_register" style="display: block;">
         
       <form id="form2" method="post" action = "/controllers/register">
 
@@ -71,7 +70,6 @@
         
     </div>
     
-    </center>
 
 
 </body>
