Added styling for account settings page

--- a/partials/account.html
+++ b/partials/account.html
@@ -9,9 +9,10 @@
 <body>
 
 
-    <div class="user_register" style="display: block;">
+    <div class="user_setting">
         
-      <form id="form2" method="post" action = "/controllers/register">
+      <!--<form id="form2" method="post" action = "/controllers/register">-->
+      <form>
 
      <label  for="emailLabel">Email</label>
      <input type="text" id="emailRegister" name="emailRegister">
