--- a/partials/account.html
+++ b/partials/account.html
@@ -16,37 +16,37 @@
 
      <label  for="emailLabel">Email</label>
      <input type="text" id="emailRegister" name="emailRegister">
-     <div id="error_emailRegister"></div>
+     <div id="email_account_error" class="account_error">Error</div>
 
      <br>
      
      <label  for="passwordLabel">Password</label>
      <input type="password" id="passwordRegister" name="passwordRegister">
-           <div id="error_passwordRegister"></div> 
+     <div id="password_account_error" class="account_error">Error</div> 
 
      <br>
      
      <label  for="firstNameLabel">First Name</label>
      <input type="text" id="firstName" name="firstName">
-           <div id="error_firstName"></div> 
+     <div id="firstName_account_error" class="account_error">Error</div> 
 
      <br>
      
      <label  for="lastNameLabel">Last Name</label>
      <input type="text" id="lastName" name="lastName">
-           <div id="error_lastName"></div>
+     <div id="lastName_account_error" class="account_error">Error</div>
 
      <br>
      
      <label  for="ageLabel">Age</label>
      <input type="number" id="age" name="age" onkeypress="return isNumberKey(event)">
-           <div id="error_age"></div> 
+     <div id="age_account_error" class="account_error">Error</div> 
 
      <br>
      
      <label  for="cityLabel">City</label>
      <input type="text" id="city" name="city">
-           <div id="error_city"></div>
+     <div id="city_account_error" class="account_error">Error</div>
 
      <br>
      
@@ -55,7 +55,7 @@
      <datalist id="countryList">
      <option value="A">
      </datalist>
-           <div id="error_country"></div>
+           <div id="country_account_error" class="account_error">Error</div>
      <br>
      
      <div class="action_btns">
